--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+	text-align: center;
+}
+
+nav, figcaption {
+	text-align: center;
+}
+nav a {
+	text-align: center;
+	background-color: rgb(255, 153, 153);
+}
+
+img {
+	display: block;
+	margin: 0 auto;
+}
+
+#featured-property p {
+	width: 800px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+#details div {
+	float: left;
+	background-color: rgb(255, 153, 153);
+	width: 25%;
+	text-align: center;
+}
+
+
+
+
+
+
