--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@ body {
   height: 100%;
   margin: 0;
 }
+
+* {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+nav > a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
+
+figcaption {
+  font-size: 80%;
+}
+
+#featured-property > p {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px;
+}
+
+#details > div {
+  display: block;
+  float: left;
+  width: 25%;
+  background-color: red;
+}
